--- a/views/show.ejs
+++ b/views/show.ejs
@@ -8,7 +8,9 @@
 </head>
 <body>
 	<p><a href="/shows"><- Back</a></p>
-	showName with details
+	name of the show with the details:
+
+	<%= showName %>
 
 	list of all episodes:
 	<ul>
