--- a/views/episode.ejs
+++ b/views/episode.ejs
@@ -4,12 +4,12 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Shows</title>
+	<title>showName - Episode #</title>
 </head>
 <body>
-	<p><a href="/">Back</a></p>
-	Shows list
+	<p><a href="#">Back</a></p>
 
-	<a href="/show/showName">Show #1</a>
+	episode # and details
+	<%= number %>
 </body>
 </html>
