--- a/views/shows.ejs
+++ b/views/shows.ejs
@@ -4,11 +4,12 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>showName - Episode #</title>
+	<title>Shows</title>
 </head>
 <body>
-	<p><a href="/show/showName">Back</a></p>
+	<p><a href="/">Back</a></p>
+	Shows list
 
-	episode # and details
+	<a href="/show/ppg">The Powerpuff Girls</a>
 </body>
 </html>
