--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,25 +1,3 @@
-#header_container nav li,
-#header_container nav li a {
-	display: inline;
-	margin-left: 20px;
-	text-transform: uppercase;
-	font-weight: 700;
-	text-decoration: none;
-	color: black;
-	font-family: 'Rampart One', sans-serif;
-}
-
-#header_container nav li a:hover {
-	color: grey;
-}
-
-#header_container h1 {
-	position: absolute;
-	left: 20px;
-	top: 0;
-	margin-top: 10px;
-}
-
 .home-content {
 	display: flex;
 	flex-direction: column;
@@ -27,14 +5,9 @@
 
 .the-girls,
 .mission,
-#header_container,
 .mission-title {
 	display: flex;
 	justify-content: center;
-}
-
-#header_container {
-	background-color: #f6f6f6;
 }
 
 .styled-list {
@@ -45,6 +18,8 @@
 }
 
 .episode-image {
+	height: 300px;
+	margin-bottom: 5px;
 	flex: 1;
 }
 
@@ -63,7 +38,7 @@
 }
 
 .episode-number {
-	flex: 0.1;
+	flex: 0.05;
 	justify-self: flex-end;
 	font-size: 80px;
 	font-family: 'Stick No Bills', sans-serif;
