--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -63,3 +63,18 @@
 	line-height: 72px;
 	margin: 30px 0 24px;
 }
+
+model-viewer {
+	display: block;
+	height: 400px;
+	width: 100%;
+	position: absolute;
+	top: 0;
+	z-index: 10;
+}
+
+@media only screen and (max-width: 767px) {
+	model-viewer {
+		display: none;
+	}
+}
