--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -66,11 +66,12 @@
 
 model-viewer {
 	display: block;
-	height: 400px;
+	height: 350px;
 	width: 100%;
 	position: absolute;
 	top: 0;
 	z-index: 10;
+	outline: none;;
 }
 
 @media only screen and (max-width: 767px) {
