todo: small change, fixing a grid layout for the episode list

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,11 +10,17 @@
 	justify-content: center;
 }
 
+/* Reading this https://css-tricks.com/snippets/css/complete-guide-grid/ refresh the grid-system knowledge
+	- finish up tomorrow note-for-self @ 22 november 2021, 15:00 ;-)
+ */
 .styled-list {
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;
+	display: grid;
+	grid-template-columns: 30% 60% 10%;
+	/* flex-direction: row; */
+}
+
+.grid-item {
+  text-align: left;
 }
 
 .episode-image {
